Magick.NET/Native/ResourceLimits.cs

//=================================================================================================
// Copyright 2013-2016 Dirk Lemstra <https://magick.codeplex.com/>
//
// Licensed under the ImageMagick License (the "License"); you may not use this file except in
// compliance with the License. You may obtain a copy of the License at
//
//   http://www.imagemagick.org/script/license.php
//
// Unless required by applicable law or agreed to in writing, software distributed under the
// License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
// express or implied. See the License for the specific language governing permissions and
// limitations under the License.
//=================================================================================================
// <auto-generated/>

using System;
using System.Diagnostics.CodeAnalysis;
using System.Runtime.InteropServices;

#if Q8
using QuantumType = System.Byte;
#elif Q16
using QuantumType = System.UInt16;
#elif Q16HDRI
using QuantumType = System.Single;
#else
#error Not implemented!
#endif

namespace ImageMagick
{
  public static partial class ResourceLimits
  {
    private static class NativeMethods
    {
      #if WIN64 || ANYCPU
      public static class X64
      {
        #if ANYCPU
        [SuppressMessage("Microsoft.Performance", "CA1810: InitializeReferenceTypeStaticFieldsInline", Scope = "member", Target = "ImageMagick.ResourceLimits+NativeMethods.X64#.cctor()")]
        static X64() { NativeLibraryLoader.Load(); }
        #endif
        [DllImport(NativeLibrary.X64Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong ResourceLimits_Disk_Get();
        [DllImport(NativeLibrary.X64Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ResourceLimits_Disk_Set(ulong value);
        [DllImport(NativeLibrary.X64Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong ResourceLimits_Height_Get();
        [DllImport(NativeLibrary.X64Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ResourceLimits_Height_Set(ulong value);
        [DllImport(NativeLibrary.X64Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong ResourceLimits_Memory_Get();
        [DllImport(NativeLibrary.X64Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ResourceLimits_Memory_Set(ulong value);
        [DllImport(NativeLibrary.X64Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong ResourceLimits_Throttle_Get();
        [DllImport(NativeLibrary.X64Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ResourceLimits_Throttle_Set(ulong value);
        [DllImport(NativeLibrary.X64Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong ResourceLimits_Width_Get();
        [DllImport(NativeLibrary.X64Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ResourceLimits_Width_Set(ulong value);
      }
      #endif
      #if !WIN64 || ANYCPU
      public static class X86
      {
        #if ANYCPU
        [SuppressMessage("Microsoft.Performance", "CA1810: InitializeReferenceTypeStaticFieldsInline", Scope = "member", Target = "ImageMagick.ResourceLimits+NativeMethods.X86#.cctor()")]
        static X86() { NativeLibraryLoader.Load(); }
        #endif
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong ResourceLimits_Disk_Get();
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ResourceLimits_Disk_Set(ulong value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong ResourceLimits_Height_Get();
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ResourceLimits_Height_Set(ulong value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong ResourceLimits_Memory_Get();
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ResourceLimits_Memory_Set(ulong value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong ResourceLimits_Throttle_Get();
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ResourceLimits_Throttle_Set(ulong value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong ResourceLimits_Width_Get();
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ResourceLimits_Width_Set(ulong value);
      }
      #endif
    }
    private static class NativeResourceLimits
    {
      public static ulong Disk
      {
        get
        {
          ulong result;
          #if ANYCPU
          if (NativeLibrary.Is64Bit)
          #endif
          #if WIN64 || ANYCPU
          result = NativeMethods.X64.ResourceLimits_Disk_Get();
          #endif
          #if ANYCPU
          else
          #endif
          #if !WIN64 || ANYCPU
          result = NativeMethods.X86.ResourceLimits_Disk_Get();
          #endif
          return result;
        }
        set
        {
          #if ANYCPU
          if (NativeLibrary.Is64Bit)
          #endif
          #if WIN64 || ANYCPU
          NativeMethods.X64.ResourceLimits_Disk_Set(value);
          #endif
          #if ANYCPU
          else
          #endif
          #if !WIN64 || ANYCPU
          NativeMethods.X86.ResourceLimits_Disk_Set(value);
          #endif
        }
      }
      public static ulong Height
      {
        get
        {
          ulong result;
          #if ANYCPU
          if (NativeLibrary.Is64Bit)
          #endif
          #if WIN64 || ANYCPU
          result = NativeMethods.X64.ResourceLimits_Height_Get();
          #endif
          #if ANYCPU
          else
          #endif
          #if !WIN64 || ANYCPU
          result = NativeMethods.X86.ResourceLimits_Height_Get();
          #endif
          return result;
        }
        set
        {
          #if ANYCPU
          if (NativeLibrary.Is64Bit)
          #endif
          #if WIN64 || ANYCPU
          NativeMethods.X64.ResourceLimits_Height_Set(value);
          #endif
          #if ANYCPU
          else
          #endif
          #if !WIN64 || ANYCPU
          NativeMethods.X86.ResourceLimits_Height_Set(value);
          #endif
        }
      }
      public static ulong Memory
      {
        get
        {
          ulong result;
          #if ANYCPU
          if (NativeLibrary.Is64Bit)
          #endif
          #if WIN64 || ANYCPU
          result = NativeMethods.X64.ResourceLimits_Memory_Get();
          #endif
          #if ANYCPU
          else
          #endif
          #if !WIN64 || ANYCPU
          result = NativeMethods.X86.ResourceLimits_Memory_Get();
          #endif
          return result;
        }
        set
        {
          #if ANYCPU
          if (NativeLibrary.Is64Bit)
          #endif
          #if WIN64 || ANYCPU
          NativeMethods.X64.ResourceLimits_Memory_Set(value);
          #endif
          #if ANYCPU
          else
          #endif
          #if !WIN64 || ANYCPU
          NativeMethods.X86.ResourceLimits_Memory_Set(value);
          #endif
        }
      }
      public static ulong Throttle
      {
        get
        {
          ulong result;
          #if ANYCPU
          if (NativeLibrary.Is64Bit)
          #endif
          #if WIN64 || ANYCPU
          result = NativeMethods.X64.ResourceLimits_Throttle_Get();
          #endif
          #if ANYCPU
          else
          #endif
          #if !WIN64 || ANYCPU
          result = NativeMethods.X86.ResourceLimits_Throttle_Get();
          #endif
          return result;
        }
        set
        {
          #if ANYCPU
          if (NativeLibrary.Is64Bit)
          #endif
          #if WIN64 || ANYCPU
          NativeMethods.X64.ResourceLimits_Throttle_Set(value);
          #endif
          #if ANYCPU
          else
          #endif
          #if !WIN64 || ANYCPU
          NativeMethods.X86.ResourceLimits_Throttle_Set(value);
          #endif
        }
      }
      public static ulong Width
      {
        get
        {
          ulong result;
          #if ANYCPU
          if (NativeLibrary.Is64Bit)
          #endif
          #if WIN64 || ANYCPU
          result = NativeMethods.X64.ResourceLimits_Width_Get();
          #endif
          #if ANYCPU
          else
          #endif
          #if !WIN64 || ANYCPU
          result = NativeMethods.X86.ResourceLimits_Width_Get();
          #endif
          return result;
        }
        set
        {
          #if ANYCPU
          if (NativeLibrary.Is64Bit)
          #endif
          #if WIN64 || ANYCPU
          NativeMethods.X64.ResourceLimits_Width_Set(value);
          #endif
          #if ANYCPU
          else
          #endif
          #if !WIN64 || ANYCPU
          NativeMethods.X86.ResourceLimits_Width_Set(value);
          #endif
        }
      }
    }
  }
}
